--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,3 @@
-.libs
-.deps
-
-*.la
-*.lo
-*.o
-*.so
-*.a
-*.dSYM
-*~
-*#
-
-.dirstamp
-.diff
 .DS_Store
 
-more mstamp-h?
-configure
-config.guess
-config.sub
-config.log
-config.status
-compile
-config.h
-config.h.in
-libtool
-ltmain.sh
-missing
-depcomp
-install-sh
-aclocal.m4
-autom4te.cache
-
-Makefile
-Makefile.in
-
-pds-pxtools/mem-fam-picturefiles/mem-fam-picturefiles
-pds-pxtools/mailman-list-audit/mailman-list-audit
+__pycache__
