--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,26 @@
-.DS_Store
-
 __pycache__
 
+*.csv
+*.xlsx
+*.pyc
+*.out
+*.bz2
 *.sqlite3
+
+client_id.json
+user-credentials.json
+
+venv
+py38
+
+.DS_Store
+
 ECC census update - Sheet1.csv
 familychangelog.txt
 memberchangelog.txt
 unresponsives.csv
 unresponsives.txt
 unresponsives0.txt
-.gitignore
 pds-queries/2020-spring-census/pprint-family-test.py
 pds-queries/2020-spring-census/print-member.py
 familychangelog.csv
