media/linux/calendar-reservations: use ecc-python-modules
Use the requirements.txt in rcc-python-modules rather than repeat the
module names here.

Signed-off-by: Jeff Squyres <jeff@squyres.com>

--- a/media/linux/calendar-reservations/requirements.txt
+++ b/media/linux/calendar-reservations/requirements.txt
@@ -1,8 +1,4 @@
-httplib2
-google-api-python-client
-google-auth-httplib2
-google-auth-oauthlib
 python-dateutil
 pytz
-oauth2client
 DateTimeRange
+-r ecc-python-modules/requirements.txt
