pds-sqlite-queries: tighten up requirements.txt
Signed-off-by: Jeff Squyres <jeff@squyres.com>

--- a/media/linux/pds-sqlite3-queries/requirements.txt
+++ b/media/linux/pds-sqlite3-queries/requirements.txt
@@ -1,8 +1,2 @@
-pytz
-httplib2
-apiclient
-google-api-python-client
-oauth2client
 openpyxl
-python-dateutil
-DateTimeRange
+-r ecc-python-modules/requirements.txt
