--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,6 @@ pds-queries/2020-spring-census/pprint-family-test.py
 pds-queries/2020-spring-census/print-member.py
 familychangelog.csv
 memberchangelog.csv
+
+cache-v1-*.json
+cache-v2-*.json
