ecobee: make a new zone for the Lighthouse
Rename Test 1 and 2 thermostats to their new Lighthouse names to match
what is in the Ecobee dashboard.

Signed-off-by: Jeff Squyres <jeff@squyres.com>

--- a/media/linux/ecobee-control/data/config.json
+++ b/media/linux/ecobee-control/data/config.json
@@ -46,10 +46,20 @@
 	"CC H",
 	"CC J",
 	"CC L",
-        "Test1",
-        "Test2"
+        "LH MAIN ROOM",
+	"LH ENTRANCE"
     ],
     "zones": [
+	{
+            "name": "Zone: Lighthouse",
+            "calendars": [
+		"Lighthouse-1-Lighthouse (75)"
+            ],
+            "ecobees": [
+		"LH MAIN ROOM",
+		"LH ENTRANCE"
+            ]
+        },
         {
             "name": "Zone: Both kitchens",
             "calendars": [
